Bug 83773 - can't copy/paste slides in outline mode
Summary: can't copy/paste slides in outline mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-11 16:09 UTC by Andras Timar
Modified: 2014-11-05 20:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2014-09-11 16:09:26 UTC
When I'm in outline mode, if I select a slide in the left slide preview pane,
ctrl-c, then select another slide I would like it after and hit ctrl-v; it
refuses to cut/paste.

The same operation in 'Normal' mode works fine; feels slightly odd.
Comment 1 Jean-Baptiste Faure 2014-09-14 17:29:05 UTC
Reproducible for me with version 4.3.3.0.0+ built at home under Ubuntu 14.04 x86-64.
Already reproducible in Versions: 4.1.6.2 and 4.0.6.2

In fact, selecting a slide in the left preview pane, select the title of the slide in the outline pane. If you copy and paste to another slide, you change the title of the second slide by the title of the first slide.

Workaround: duplicate the slide and move the duplicated slide where you want.

I needed several experiments to see that because when you do this manipulation you are looking at the left preview pane and small changes (like Conclusion becomes Introduction) are not very visible.

Not sure if we have there a bug, but, for me, this behavior is clearly sub-optimal and should be improved.

Best regards. JBF
Comment 2 Andras Timar 2014-11-05 20:38:37 UTC
Marco Cecchetti committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fae7fed54206b98cc3aac24abcdac384d3bd9437&h=libreoffice-4-3

fix bnc#624546 (fdo#83773) slide pane cut/copy/paste in outline view

It will be available in 4.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.